<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context="com.game.kolas.mygame.MenuActivity">



    <GridLayout
        android:columnCount="1"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <com.game.kolas.mygame.views.CustomFontTextView
            android:id="@+id/change_dialogs"
            android:layout_marginBottom="16dp"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="40sp" />

        <com.game.kolas.mygame.views.CustomFontButton
            android:id="@+id/button_play"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/butt_selt"
            android:onClick="onClick"
            android:padding="8dp"
            android:text="@string/play_text"
            android:textSize="20sp" />

        <com.game.kolas.mygame.views.CustomFontButton
            android:id="@+id/button_settings"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/butt_selt"
            android:onClick="onClick"
            android:padding="8dp"
            android:text="@string/settings_text"
            android:textSize="20sp" />

        <com.game.kolas.mygame.views.CustomFontButton
            android:id="@+id/button_about"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/butt_selt"
            android:onClick="onClick"
            android:padding="8dp"
            android:text="@string/about_text"
            android:textSize="20sp" />

        <com.game.kolas.mygame.views.CustomFontButton
            android:id="@+id/button_exit"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/butt_selt"
            android:onClick="onClick"
            android:padding="8dp"
            android:text="@string/exit_text"
            android:textSize="20sp" />
    </GridLayout>




</LinearLayout>
