<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="4">


    <com.game.kolas.mygame.views.CustomFontTextView
        android:id="@+id/textView"
        android:textSize="23sp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/m_dimens"
        android:gravity="center" />

    <com.game.kolas.mygame.views.CustomFontButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/m_dimens"
        android:background="@drawable/butt_selt"
        android:text="@string/continue_game" />

    <com.game.kolas.mygame.views.CustomFontButton
        android:id="@+id/newgame"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/m_dimens"
        android:background="@drawable/butt_selt"
        android:text="@string/repeat_game" />

    <com.game.kolas.mygame.views.CustomFontButton
        android:id="@+id/mainmenu"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/m_dimens"
        android:background="@drawable/butt_selt"
        android:text="@string/menu_text" />
</LinearLayout>
